# trafficmaster-backend

./: .env.dist  .gitignore  .pre-commit-config.yaml  Justfile  TODO.txt  alembic.ini  docker-compose-local.yaml  main.py  pyproject.toml  requirements.txt
src/trafficmaster/application/auth/: auth_model.py  log_in.py  log_out.py  read_current_user.py  sign_up.py
src/trafficmaster/application/commands/card/: add_tag.py  change_answer.py  change_deck.py  change_image_path.py  change_question.py  create_card.py  delete_card.py  remove_tag.py
src/trafficmaster/application/commands/card_progress/: reset_card_progress.py  review_card.py
src/trafficmaster/application/commands/deck/: assign_deck_config.py  change_description.py  change_privacy.py  change_title.py  copy_deck.py  create_deck.py  delete_deck.py
src/trafficmaster/application/commands/deck_config/: change_advanced.py  change_config_name.py  change_daily_limits.py  change_lapses.py  change_new_cards.py  create_deck_config.py  delete_deck_config.py
src/trafficmaster/application/commands/user/: activate_user.py  change_user_email.py  change_user_name.py  change_user_password.py  create_user.py  delete_user_by_id.py  grant_admin_by_id.py  revoke_admin_by_id.py
src/trafficmaster/application/common/ports/: access_revoke.py  access_revoker.py  clock.py  identity_provider.py
src/trafficmaster/application/common/query_params/: card_filters.py  pagination.py  user_filters.py
src/trafficmaster/application/common/services/: auth_session.py  current_user.py
src/trafficmaster/application/errors/: auth.py  base.py  card.py  card_progress.py  deck.py  gateway.py  query_params.py  user.py
src/trafficmaster/application/queries/card/: read_all_cards.py  read_by_id.py
src/trafficmaster/application/queries/card_progress/: preview_review_intervals.py  read_card_progress.py  read_deck_stats.py  read_review_log_by_card.py  read_review_log_by_user.py  read_review_queue.py
src/trafficmaster/application/queries/deck/: read_by_id.py  read_decks_by_user_id.py  read_public_decks.py
src/trafficmaster/application/queries/deck_config/: read_by_id.py  read_by_user_id.py
src/trafficmaster/application/queries/user/: read_aggregate_stats.py  read_all_users.py  read_by_id.py
src/trafficmaster/domain/: TODO
src/trafficmaster/domain/card/entities/: card.py
src/trafficmaster/domain/card/errors/: card.py
src/trafficmaster/domain/card/ports/: card_id_generator.py
src/trafficmaster/domain/card/services/: card_service.py
src/trafficmaster/domain/card/values/: card_answer.py  card_id.py  card_question.py  card_tag.py
src/trafficmaster/domain/card_progress/entities/: card_progress.py  review_log.py
src/trafficmaster/domain/card_progress/errors/: card_progress.py
src/trafficmaster/domain/card_progress/ports/: card_progress_id_generator.py  review_id_generator.py
src/trafficmaster/domain/card_progress/services/: card_progress_service.py
src/trafficmaster/domain/card_progress/values/: card_progress_id.py  card_state.py  ease_factor.py  interval.py  review_log_id.py  review_rating.py
src/trafficmaster/domain/common/: errors.py
src/trafficmaster/domain/common/entities/: base_entity.py
src/trafficmaster/infrastructure/: utc_clock.py
src/trafficmaster/infrastructure/auth/: cookie_params.py
src/trafficmaster/infrastructure/errors/: transaction_manager.py
src/trafficmaster/infrastructure/persistence/: provider.py
src/trafficmaster/setup/: bootstrap.py
src/trafficmaster/setup/config/: database.py  settings.py
(+91 files in other folders)
