[project]
name = "trafficmaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.2",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.11",
    "pre-commit",
]



[tool.mypy]
mypy_path = "src"
plugins = "pydantic.mypy"
files = ["src"]
exclude = ["src/trafficmaster/setup/config/"]
python_version = "3.12"
explicit_package_bases = true

strict = true
pretty = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
allow_untyped_calls = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
show_error_codes = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true


[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
exclude = ["src/trafficmaster/setup/config/**.py"]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "CPY001", "A005", "TRY003", "COM812", "FBT001", "FBT003", "PLR0913", "RUF001"]

[tool.ruff.lint.per-file-ignores]
"src/trafficmaster/infrastructure/persistence/migrations/**" = ["ERA001", "INP001", "E501", "PLC0415"]
"src/trafficmaster/presentation/http/v1/routes/documents/create_documents/handlers.py" = ["S311"]
"tests/**" = ["S101", "PLR2004", "S106"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
no-lines-before = ["local-folder"]
